fix: CSS issue, services where too close from text

--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -470,6 +470,7 @@ footer
     display flex
     justify-content center
     align-items stretch
+    margin-top 27px
     margin-left -7.5em
     margin-right -7.5em
 
